# intro-to-llm

./: .gitignore  01_Intro_prompt_enginnering.ipynb  02_GigaChat_Prompt_LangChain_LlamaIndex.ipynb  1-Intro_prompt_enginnering.ipynb  README.md
hw01/: hw_1.py  test_hw_1_example.py
hw02/: hw_2.ipynb
hw03/: hw_3.ipynb
learning/: 01_simple_llm.ipynb  02_llm_with_datasource.ipynb  pyproject.toml
learning/langchain/: 01_simple_llm.ipynb
practicing-rag/: build_vector_db.ipynb  chromadb.ipynb  mistral_generation.ipynb  pyproject.toml  simple_rag.ipynb
week02-langchain-llamaindex/: 02_Mistral_Prompt_LangChain_LlamaIndex.ipynb
week03-llm-agents/: 03_Agents_LLM.ipynb  03_agents_edited.ipynb
week05-rag-components/: 5_Retrieval_Augmented_Generation_Part2.ipynb
week07-rag-advanced/: 07_AdvancedRAG.ipynb
week08-tg-bot/: bot.py  flask_llm.py
