[tool.poetry]
name = "learning"
version = "0.1.0"
description = ""
authors = ["deniskirbaba <kirbabadenis@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
python-dotenv = "^1.0.1"
langchain = "^0.3.3"
langchain-mistralai = "^0.2.0"
llama-index-core = "^0.11.17"
llama-index-readers-file = "^0.2.2"
llama-index-llms-ollama = "^0.3.4"
llama-index-embeddings-huggingface = "^0.3.1"
ipykernel = "^6.29.5"
ipywidgets = "^8.1.5"
llama-index-embeddings-openai = "^0.2.5"
sentence-transformers = "^3.2.0"
transformers = "^4.45.2"
llama-index-llms-langchain = "^0.4.2"
langchain-community = "^0.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
