[tool.poetry]
name = "practicing-rag"
version = "0.1.0"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.4"
langserve = {extras = ["all"], version = "^0.3.0"}
langchain = "^0.3.5"
langchain-openai = "^0.2.4"
pydantic-settings = "^2.6.0"
toml = "^0.10.2"
uvicorn = "^0.32.0"
python-dotenv = "^1.0.1"
langchain-community = "^0.3.7"
faiss-cpu = "^1.9.0"
ipykernel = "^6.29.5"
langchain-mistralai = "^0.2.2"
beautifulsoup4 = "^4.12.3"
lxml = "^5.3.0"
pandas = "^2.2.3"
chromadb = "^0.5.21"
langchain-huggingface = "^0.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
